[project]
name = "tolveris-api"
version = "0.1.0"
description = "Tolveris Launchpad API"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115,<1", "uvicorn[standard]>=0.30,<1", "pydantic>=2.8,<3"]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
